[package]
name = "cargobroker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
serde = {version="1.0.191", features=["derive"]}
